--- a/views/post/home.ejs
+++ b/views/post/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title><%= title %></title>
 </head>
 <body>
 <h1><%= title%></h1>
