added admin panel and updated paths in grunt configs

--- a/public/admin/views/post/home.ejs
+++ b/public/admin/views/post/home.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><%= title %></title>
+    <title>Admin Page</title>
 </head>
 <body>
-<h1><%= title%></h1>
+<h1> Welcome Admin Page</h1>
 </body>
 </html>
